--- a/css/principal.css
+++ b/css/principal.css
@@ -81,6 +81,9 @@ body{
 }
 
 /*ELECTRODOMESTICOS*/
+.main{
+    background-color: white;
+}
 .main .portada{
     display: flex;
     flex-wrap: wrap;
@@ -94,6 +97,13 @@ body{
     position: relative;
 }
 
+.linea {
+    border-top: 1px solid black;
+    height: 2px;
+    padding: 0;
+    margin: 20px auto 0 auto;
+}
+
 .parallax{
     background-image: url('../img/FondoElectro.jpg');
     height: max-content;
@@ -103,7 +113,7 @@ body{
     background-size: cover;
 }
 .deals-container{
-    margin: 50px 50px 50px 5%;
+    margin: 50px 0 0 5%;
     width: 90%;
     text-align: center;
 }
@@ -159,6 +169,72 @@ body{
     box-shadow: 0 0 10px 5px grey;
 }
 
+.olas{
+    position: relative;
+    width: 100%;
+    height: 20vh;
+    overflow: hidden;
+}
 
+.olas .wave{
+    position: absolute;
+    bottom:0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url('../img/wave.png');
+    background-size: 1000px 100px;
+}
 
+.olas .wave.wave1{
+    animation: animate 30s linear infinite;
+    z-index: 1000;
+    opacity: 1;
+    animation-delay: 0s;
+    bottom: 0;
+}
+
+.olas .wave.wave2{
+    animation: animate2 30s linear infinite;
+    z-index: 999;
+    opacity: 0.5;
+    animation-delay: -5s;
+    bottom: 10px;
+}
+
+.olas .wave.wave3{
+    animation: animate 15s linear infinite;
+    z-index: 998;
+    opacity: 0.2;
+    animation-delay: -2s;
+    bottom: 15px;
+}
+
+.olas .wave.wave4{
+    animation: animate2 5s linear infinite;
+    z-index: 997;
+    opacity: 0.7;
+    animation-delay: -2s;
+    bottom: 20px;
+}
+
+@keyframes animate
+{ 
+    0%{
+        background-position-x:0 ;
+    }
+    100%{
+        background-position-x: 1000px;
+    }
+}
+
+@keyframes animate2
+{
+    0%{
+        background-position-x:0 ;
+    }
+    100%{
+        background-position-x: -1000px;
+    }
+}
 /*FIN ELECTRODOMESTICOS*/
