--- a/css/principal.css
+++ b/css/principal.css
@@ -7,18 +7,17 @@
     box-sizing: border-box;
 }
 
-.container {
-    width: 80%;
-    /*se recomienda usar los 4 margenes*/
-    /* top left bottom right */
-    /*margin:1rem auto 1rem auto;*/
-    top:0;
-    /* este es la abreviación de 1re auto 1rem*/
+body{
+    font: 16px;
+    color: #303133;
 }
+
+
 
 .nav-back{
     background-color: #FF9595;
 }
+
 .nav_principal{
     /* Usamos display:flex para 
     habilitar las opciones de flexbox.
@@ -26,7 +25,9 @@
     de lo que queramos que se encuadre.
     El justify-content es para posicionar el texto.
     */
+    width: 80%;
     display: flex;
+    top:0;
     /* existen distintos tipos de espacios, queda probar*/
     flex-direction: row;
     justify-content: space-between;
@@ -78,3 +79,162 @@
         justify-content: space-between;
     }
 }
+
+/*ELECTRODOMESTICOS*/
+.main{
+    background-color: white;
+}
+.main .portada{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between
+}
+
+.main .portada img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+}
+
+.linea {
+    border-top: 1px solid black;
+    height: 2px;
+    padding: 0;
+    margin: 20px auto 0 auto;
+}
+
+.parallax{
+    background-image: url('../img/FondoElectro.jpg');
+    height: max-content;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.deals-container{
+    margin: 50px 0 0 5%;
+    width: 90%;
+    text-align: center;
+}
+
+.title{
+    margin-top: 100px;
+    padding:50px;
+    font-size: 50px;
+    font-weight: bold;
+    letter-spacing: 10px;
+    color: white;
+    background: rgba(0,0,0,0.5);
+}
+
+.items{
+    width: max-content;
+    margin: 25px;
+    border-radius: 0 0 50px 50px;
+    display: inline-block;
+}
+
+.images{
+    display: inline-block;
+}
+
+.item-image-size{
+    height: 220px;
+    width: 170px;
+    padding:5px;
+}
+
+.description{
+    margin: 20px;
+    min-height: 100px;
+}
+
+.item-select{
+    margin: 10px 0 0 0;
+}
+
+.buynow-btn{
+    border:1px solid #184d47;
+    background: black;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-weight: bold;
+    margin-top:10px;
+    color:white;
+}
+
+.buynow-btn:hover{
+    border:1px solid grey;
+    box-shadow: 0 0 10px 5px grey;
+}
+
+.olas{
+    position: relative;
+    width: 100%;
+    height: 20vh;
+    overflow: hidden;
+}
+
+.olas .wave{
+    position: absolute;
+    bottom:0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url('../img/wave.png');
+    background-size: 1000px 100px;
+}
+
+.olas .wave.wave1{
+    animation: animate 30s linear infinite;
+    z-index: 1000;
+    opacity: 1;
+    animation-delay: 0s;
+    bottom: 0;
+}
+
+.olas .wave.wave2{
+    animation: animate2 30s linear infinite;
+    z-index: 999;
+    opacity: 0.5;
+    animation-delay: -5s;
+    bottom: 10px;
+}
+
+.olas .wave.wave3{
+    animation: animate 15s linear infinite;
+    z-index: 998;
+    opacity: 0.2;
+    animation-delay: -2s;
+    bottom: 15px;
+}
+
+.olas .wave.wave4{
+    animation: animate2 5s linear infinite;
+    z-index: 997;
+    opacity: 0.7;
+    animation-delay: -2s;
+    bottom: 20px;
+}
+
+@keyframes animate
+{ 
+    0%{
+        background-position-x:0 ;
+    }
+    100%{
+        background-position-x: 1000px;
+    }
+}
+
+@keyframes animate2
+{
+    0%{
+        background-position-x:0 ;
+    }
+    100%{
+        background-position-x: -1000px;
+    }
+}
+/*FIN ELECTRODOMESTICOS*/
