--- a/css/principal.css
+++ b/css/principal.css
@@ -307,6 +307,10 @@ body{
 
 }
 
+.producto .celulares{
+    display: inline-block;
+}
+
 .precio{
     margin-top: 8px;
     color: rgb(84, 12, 99);
