--- a/css/principal.css
+++ b/css/principal.css
@@ -240,14 +240,22 @@ body{
 /*FIN ELECTRODOMESTICOS*/
 
 /* Celulares*/
-.body-cell{
-    margin: 0;
-}
-
 .nav_cell{
     
     width: 100%;
     height: 80px;
+    background-color: white;
+    animation-name: navanimation;
+    animation-duration: 5s;
+    animation-delay: 1s;
+}
+
+@keyframes navanimation {
+    0% {background-color: rgb(240, 206, 240);}
+    25% {background-color: rgb(247, 186, 247);}
+    50% {background-color: rgb(204, 182, 245);}
+    75% {background-color: rgb(196, 239, 250);}
+    100% {background-color: white;}
 }
 
 .nav_cell .nav_cell_empresa {
@@ -265,6 +273,8 @@ body{
     text-align: left;
     width: 80%;
     display: inline-block;
+   
+    
 }
 
 .nav_cell .nav_cell_tiendas ul li{
@@ -282,7 +292,7 @@ body{
 
 .portada-img{  
     width: 100%;
-    height: 5px;
+    height: 7px;
     overflow: hidden;
 }
 
@@ -295,7 +305,15 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 30px;
     text-align: center;
+    animation: titleanimation;
+    animation-duration: 5s;
 }
+@keyframes titleanimation {
+    0% {color: white;}
+    50% {color: gray;}
+    50% {color: black;}
+}
+
 
 .producto figure {
     display: inline-block;
@@ -305,10 +323,6 @@ body{
     width: 400px;
     height: 400px;
 
-}
-
-.producto .celulares{
-    display: inline-block;
 }
 
 .precio{
@@ -327,6 +341,5 @@ body{
 .producto {
     text-align: center;
 }
-
 
 /* celulares */
