--- a/css/principal.css
+++ b/css/principal.css
@@ -282,8 +282,9 @@ body{
 /*FIN ELECTRODOMESTICOS*/
 
 /* Celulares*/
+
 .nav_cell{
-    
+    padding: 15px;
     width: 100%;
     height: 80px;
     background-color: white;
