--- a/css/principal.css
+++ b/css/principal.css
@@ -122,6 +122,169 @@ body{
     }
 }
 
+
+/*INDEX*/
+.portafolio {
+    background: #f2f2f2;
+}
+
+.galeria-port {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    padding: 100px;
+    grid-gap: 50px;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+.imagen-port {
+    width: 100%;
+    margin-bottom: 10px;
+    background: blue;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+}
+
+.imagen-port > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.hover-galeria {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background: blueviolet;
+    transition: transform 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hover-galeria img {
+    width: 50px;
+    filter: invert(1);
+}
+
+.hover-galeria p {
+    color: #fff;
+}
+
+.imagen-port:hover .hover-galeria {
+    transform: scale(1);
+}
+
+.cards {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cards .card {
+    background: blueviolet;
+    display: flex;
+    width: 46%;
+    height: 200px;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+}
+
+.cards .card img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    display: block;
+}
+
+.cards .card > .contenido-texto-card {
+    width: 60%;
+    color: #fff;
+}
+.cards .card > .contenido-texto-card h4 {
+    font-size: 20px;
+    color: white;
+}
+.cards .card > .contenido-texto-card p {
+    font-weight: 300;
+    padding-top: 5px;
+    color: white;
+}
+
+footer  {
+    background: #414141;
+    padding: 60px 0 30px 0;
+    margin: auto;
+    overflow: hidden;
+}
+
+.contenedor-footer {
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    margin: auto;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #ccc;
+}
+
+.content-foo {
+    text-align: center;
+}
+
+.content-foo h4 {
+    color: #fff;
+    border-bottom: 3px solid #af20d3;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.titulo-final {
+    text-align: center;
+    font-size: 24px;
+    margin: 20px 0 0 0;
+    color: #9e9797;
+}
+
+.contenedor {
+    margin-bottom: 100px;
+    background: #fff;
+}
+
+.titulo {
+    color: #000;
+    font-size: 100px;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
+footer{
+    background: #414141;
+    padding: 60px 0 30px 0;
+    margin: auto;
+    overflow: hidden;
+    color: white;
+}
+
+.contenedor-footer {
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    margin: auto;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #ccc;
+}
+/*INDEX */
+
 /*ELECTRODOMESTICOS*/
 .main{
     background-color: white;
